Update URL to URI